--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "license": "MIT",
   "homepage": "",
   "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "jest": "^24.0.0",
+    "lint-staged": "^8.1.1",
     "prettier": "1.13.0",
     "react-scripts": "^1.1.4"
   },
@@ -14,10 +23,36 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "jest --watchAll --coverage --config ./jest.config.json",
+    "eject": "react-scripts eject",
+    "lint": "eslint src"
   },
   "prettier": {
     "trailingComma": "all"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "js/**/*.{js,jsx}",
+      "!js/setupTests.js",
+      "!js/**/index.js",
+      "!<rootDir>/node_modules/"
+    ]
+  },
+  "peerDependencies": {
+    "prop-types": "^15.5.4",
+    "react": "^15.0.0 || ^16.7.0",
+    "react-dom": "^15.0.0 || ^16.7.0"
   }
 }
