--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "license": "MIT",
   "homepage": "",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
@@ -13,18 +18,18 @@
     "husky": "^1.3.1",
     "jest": "^24.0.0",
     "lint-staged": "^8.1.1",
-    "prettier": "1.13.0",
-    "react-scripts": "^1.1.4"
+    "prettier": "1.16.1",
+    "react-scripts": "^2.1.3"
   },
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --config ./jest.config.json",
-    "test:watch": "jest --watchAll --coverage --config ./jest.config.json",
+    "test": "jest --watchAll --config ./jest.config.json",
+    "test:coverage": "jest --coverage --config ./jest.config.json",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
@@ -41,14 +46,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "js/**/*.{js,jsx}",
-      "!js/setupTests.js",
-      "!js/**/index.js",
-      "!<rootDir>/node_modules/"
-    ]
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
