--- a/jest.config.json
+++ b/jest.config.json
@@ -1,27 +1,26 @@
 {
-    "collectCoverage": false,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/index.js"
-    ],
-    "coverageDirectory": "coverage",
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    },
-    "notify": true,
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "verbose": true
-  }
-  
+  "collectCoverage": true,
+  "collectCoverageFrom": [
+    "src/**/*.js",
+    "!src/**/index.js"
+  ],
+  "coverageDirectory": "coverage",
+  "coverageThreshold": {
+    "global": {
+      "branches": 100,
+      "functions": 100,
+      "lines": 100,
+      "statements": 100
+    }
+  },
+  "notify": true,
+  "roots": [
+    "<rootDir>/src"
+  ],
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
+  "testURL": "http://localhost",
+  "transform": {
+    "^.+\\.js$": "babel-jest"
+  },
+  "verbose": true
+}
