--- a/package.json
+++ b/package.json
@@ -2,14 +2,38 @@
   "name": "react-forms-builder",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "",
+  "repository": ".",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "jsnext:main": "dist/index.es.js",
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
+  },
+  "scripts": {
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "jest --watchAll --coverage --config ./jest.config.json",
+    "rollup": "rollup -c",
+    "build": "npm run rollup && npm run gulp",
+    "start": "rollup -c -w",
+    "lint": "eslint src"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.5.4",
+    "react": "^15.0.0 || ^16.7.0",
+    "react-dom": "^15.0.0 || ^16.7.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.0.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babelrc-rollup": "^3.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
@@ -20,23 +44,20 @@
     "jest": "^24.0.0",
     "lint-staged": "^8.1.1",
     "prettier": "1.16.1",
-    "react-scripts": "^2.1.3"
-  },
-  "dependencies": {
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-cpy": "^1.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-url": "^2.1.0",
+    "webpack": "^4.26.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest --watchAll --config ./jest.config.json",
-    "test:coverage": "jest --coverage --config ./jest.config.json",
-    "eject": "react-scripts eject",
-    "lint": "eslint src"
-  },
-  "prettier": {
-    "trailingComma": "all"
-  },
+  "files": [
+    "dist"
+  ],
   "lint-staged": {
     "*.js": [
       "npm run lint",
@@ -48,9 +69,12 @@
       "pre-commit": "lint-staged"
     }
   },
-  "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.7.0",
-    "react-dom": "^15.0.0 || ^16.7.0"
+  "jest": {
+    "collectCoverageFrom": [
+      "js/**/*.{js,jsx}",
+      "!js/setupTests.js",
+      "!js/**/index.js",
+      "!<rootDir>/node_modules/"
+    ]
   }
 }
