--- a/package.json
+++ b/package.json
@@ -1,39 +1,46 @@
 {
   "name": "react-forms-builder",
+  "description": "Small library to simplify the use of forms in React.",
   "version": "0.1.0",
-  "license": "MIT",
+  "keywords": [
+    "react form",
+    "form builder",
+    "react",
+    "react-component",
+    "form"
+  ],
   "repository": ".",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
+  "license": "MIT",
+  "main": "dist/react-form-builder.js",
+  "module": "dist/react-form-builder.js",
+  "jsnext:main": "dist/react-form-builder.js",
+  "sideEffects": false,
+  "author": "Jesus Javega <jesusgraficap@gmail.com>",
   "scripts": {
-    "test": "jest --config ./jest.config.json",
-    "test:watch": "jest --watchAll --coverage --config ./jest.config.json",
-    "rollup": "rollup -c",
-    "build": "npm run rollup && npm run gulp",
-    "start": "rollup -c -w",
-    "lint": "eslint src"
+    "prebuild": "npm run clean",
+    "build": "rollup -c",
+    "clean": "rimraf dist",
+    "lint": "eslint src",
+    "prepare": "npm run prebuild && npm run build",
+    "test": "jest  --watchAll --config --no-cache ./jest.config.json",
+    "test:watch": "jest --watchAll --coverage --no-cache --config ./jest.config.json"
   },
   "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.7.0",
-    "react-dom": "^15.0.0 || ^16.7.0"
+    "react": ">=0.14.0 <17.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babelrc-rollup": "^3.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/helper-module-imports": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-macros": "^2.2.2",
+    "babel-plugin-transform-define": "^1.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "cross-env": "^5.0.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
@@ -46,14 +53,14 @@
     "prettier": "1.16.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-cpy": "^1.1.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^2.1.0",
-    "webpack": "^4.26.0"
+    "rimraf": "^2.6.1",
+    "rollup": "^0.66.2",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "webpack": "^4.29.0"
   },
   "files": [
     "dist"
@@ -69,12 +76,8 @@
       "pre-commit": "lint-staged"
     }
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "js/**/*.{js,jsx}",
-      "!js/setupTests.js",
-      "!js/**/index.js",
-      "!<rootDir>/node_modules/"
-    ]
+  "dependencies": {
+    "@babel/runtime": "^7.1.2",
+    "prop-types": "^15.6.0"
   }
 }
