--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint": "eslint src",
     "prepare": "npm run prebuild && npm run build",
     "test": "jest  --watchAll --config --no-cache ./jest.config.json",
-    "test:watch": "jest --watchAll --coverage --no-cache --config ./jest.config.json"
+    "test:watch": "jest --watchAll --coverage --no-cache --config ./jest.config.json",
+    "start:example": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "peerDependencies": {
     "react": ">=0.14.0 <17.0.0"
@@ -37,6 +38,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-macros": "^2.2.2",
     "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
@@ -53,6 +55,7 @@
     "prettier": "1.16.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.5",
     "rimraf": "^2.6.1",
     "rollup": "^0.66.2",
     "rollup-plugin-babel": "^4.0.3",
@@ -60,7 +63,9 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^6.0.0",
-    "webpack": "^4.29.0"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "files": [
     "dist"
