add compile babel es5 only in test with jests, es5 not compatible with rollup and add uglifi

--- a/jest.config.json
+++ b/jest.config.json
@@ -16,13 +16,12 @@
     }
   },
   "notify": true,
-  "roots": [
-    "<rootDir>/src"
-  ],
+  "roots": ["<rootDir>/src"],
   "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
   "testURL": "http://localhost",
   "transform": {
     "^.+\\.(js|jsx)?$": "babel-jest"
   },
-  "verbose": false
+  "verbose": false,
+  "transformIgnorePatterns": ["<rootDir>/node_modules/"]
 }
