--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clean": "rimraf dist",
     "lint": "eslint src",
     "prepare": "npm run prebuild && npm run build",
-    "test": "BABEL_ENV=test jest  --watchAll --config --no-cache ./jest.config.json",
+    "test": "BABEL_ENV=test jest  --watchAll --no-cache --config ./jest.config.json",
     "test:coverage": "BABEL_ENV=test jest --watchAll --coverage --no-cache --config ./jest.config.json",
     "start:example": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
