--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ branches:
   only:
     - master
     - develop
+
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov --file coverage/lcov.info --disable search
