--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
   - '8'
+
+notifications:
+  email:
+  - jesusgraficap@gmail.com
+  
 script:
   - yarn test
   - yarn prepare
