--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jkr26/react-forms-builder-logic",
   "description": "Small library to simplify the use of forms in React.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "keywords": [
     "react form",
     "form builder",
@@ -40,6 +40,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-macros": "^2.2.2",
@@ -56,6 +57,7 @@
     "jest": "^24.0.0",
     "lint-staged": "^8.1.1",
     "prettier": "1.16.1",
+    "prop-types": "^15.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.5",
@@ -83,9 +85,5 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.1.2",
-    "prop-types": "^15.6.0"
   }
 }
