--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,8 @@
 {
   "collectCoverage": true,
   "collectCoverageFrom": [
-    "<rootDir>/tests/**/*.{js,jsx}"
+    "<rootDir>/tests/**/*.{js,jsx}",
+    "<rootDir>/src/**/*.{js,jsx}"
   ],
   "coverageDirectory": "coverage",
   "coverageThreshold": {
