--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "BABEL_ENV=test jest  --watchAll --no-cache --config ./jest.config.json",
     "test:ci": "BABEL_ENV=test jest --no-cache --config ./jest.pro.config.json --runInBand",
     "test:coverage": "BABEL_ENV=test jest --watchAll --coverage --no-cache --config ./jest.config.json",
-    "coveralls": "BABEL_ENV=test jest --coverage --no-cache --config ./jest.config.json && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "BABEL_ENV=test jest --config ./jest.pro.config.json && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "start:example": "webpack-dev-server --config ./webpack.config.js --mode development",
     "release": "npm publish --access=public"
   },
