--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - npm run prepare
   - npm run test:ci
   - npm run coveralls
+  - sonar-scanner
 after_success:
   - codecov --file coverage/lcov.info --disable search
 
@@ -22,6 +23,12 @@ branches:
     - develop
 
 
-
+addons:
+  sonarcloud:
+    organization: "jeiker26-github"
+    token:
+      secure: "$SONAR_TOKEN"
+    branch:
+      name: "$TRAVIS_BRANCH"
 
 
