--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "BABEL_ENV=test jest  --watchAll --no-cache --config ./jest.config.json",
     "test:ci": "BABEL_ENV=test jest --coverage --no-cache --config ./jest.pro.config.json --runInBand",
     "test:coverage": "BABEL_ENV=test jest --watchAll --coverage --no-cache --config ./jest.config.json",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "coveralls": "cat ./coverage/lcov.info | COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN coveralls",
     "start:example": "webpack-dev-server --config ./webpack.config.js --mode development",
     "release": "npm publish --access=public"
   },
