--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ notifications:
   email:
   - jesusgraficap@gmail.com
 
+cache:
+  directories:
+  - node_modules
+before_install:
+  - npm update
 install:
   - npm install
 script:
