--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - npm run prepare
   - npm run test:ci
 after_success:
-  - npm run coveralls
+  - cat ./coverage/lcov.info | coveralls && rm -rf ./coverage
 
 branches:
   only:
