--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - npm run prepare
   - npm run test:ci
 after_success:
-  - cat ./coverage/lcov.info | coveralls && rm -rf ./coverage
+  - cat ./coverage/lcov.info | COVERALLS_REPO_TOKEN=COVERALLS_REPO_TOKEN coveralls && rm -rf ./coverage
 
 branches:
   only:
